<resources>
    <string name="app_name">Lab5</string>
    <string name="nombre">nombre</string>
    <string name="cantidad">cantidad</string>
    <string name="mas">+</string>
    <string name="menos">-</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nuevo_producto">Nuevo Producto</string>
    <string name="inventario_actual">Inventario Actual</string>
    <string name="reinciar_lista">Reinciar Lista</string>
    <string name="name">Nombre</string>
    <string name="no">Name</string>
    <string name="codigo">Codigo</string>
    <string name="cod">Codigo</string>
    <string name="button">Button</string>
    <string name="productos">Productos</string>
    <string name="inventarios">Inventarios</string>
    <string name="title_activity_d">d</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_h">h</string>
</resources>
