<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/newn" android:textStyle="bold"
                android:textSize="20sp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="84dp" android:layout_marginStart="39dp"/>
        <TextView
                android:text="@string/codigo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/newId" android:textSize="20sp"
                android:fontFamily="sans-serif-black" app:layout_constraintStart_toStartOf="@+id/editText"
                android:layout_marginTop="23dp" app:layout_constraintTop_toBottomOf="@+id/editText"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/no"
                android:ems="10"
                android:id="@+id/editText"
                android:textColor="@android:color/darker_gray" app:layout_constraintStart_toStartOf="@+id/newn"
                app:layout_constraintTop_toBottomOf="@+id/newn"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/cod"
                android:ems="10"
                android:id="@+id/editText2"
                android:textColor="@android:color/darker_gray" app:layout_constraintStart_toStartOf="@+id/newId"
                app:layout_constraintTop_toBottomOf="@+id/newId"/>
        <Button
                android:text="Añadir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/add"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="182dp"/>
    </android.support.constraint.ConstraintLayout>
</layout>