<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_marginRight="5dp" android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" android:layout_marginLeft="5dp">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_marginLeft="5dp" android:layout_marginRight="5dp">

            <TextView
                    android:text="@string/nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/nomProducto"
                    android:fontFamily="sans-serif-medium" android:textSize="24sp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/plus" app:layout_constraintHorizontal_bias="0.139"/>
            <Button
                    android:text="@string/mas"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:id="@+id/plus"
                    android:fontFamily="sans-serif-black" android:background="@android:color/holo_green_dark"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <Button
                    android:text="@string/menos"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:id="@+id/sub"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-black" android:background="@color/colorAccent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/plus" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                    android:text="@string/cantidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/q"
                    android:fontFamily="sans-serif-black" android:textSize="24sp"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/nomProducto" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/sub" app:layout_constraintHorizontal_bias="0.147"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
